src/style/sections/_contact.scss
#contact {
  background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
  margin-bottom: -1px;
  color: $white-color;
  height: 80vh;


  @include respond(tab-land) {
    padding: 10rem 0;
    clip-path: none;
    margin-top: 0;
    -webkit-clip-path: none;
  }

  .contact-wrapper {
    margin-top: 2rem;
    padding: 0 2rem;
    backface-visibility: hidden;

    &__text {
      margin-bottom: 2rem;
    }

    &__text,
    a {
      font-size: 2.4rem;

      // Responsive for contact text
      @include respond(phone) {
        font-size: 2rem;
      }
    }
  }
}

